Added a website.html page to website link in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <span class="separator">|</span>
         <a href="https://github.com/venkatprasadkalet" target="_blank">GitHub.com/venkatprasadkalet</a>
         <span class="separator">|</span>
-        <a href="http://venkatprasadkalet.com" target="_blank">Website</a>
+        <a href="website.html" target="_blank">Website</a>
     </div>
     <div class="paper">
         <div class="container">
