--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Margrate</title>
+    <title>|| Margrate ||</title>
     <link rel="stylesheet" href="venkat.css" type="text/css">
 </head>
 <body>
